# athena-with-aws-bedrock

./: Makefile  README.md  docker-compose.yml  pyproject.toml
src/: main.py  models.py  prompt.txt  resolvers.py  schema_def.json
src/builder/: llm_builder.py
src/executor/: query_executor.py
src/generator/: query_generator.py
src/generator/query/: query_generator.py
src/generator/schema/: schema_generator.py
